[gd_scene load_steps=33 format=2]

[ext_resource path="res://images/ok.png" type="Texture" id=1]
[ext_resource path="res://images/stop.png" type="Texture" id=2]
[ext_resource path="res://images/cadebox-logo.png" type="Texture" id=3]
[ext_resource path="res://images/play.png" type="Texture" id=4]
[ext_resource path="res://sounds/song.wav" type="AudioStream" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Sound.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=4]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 9 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 10, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="DynamicFontData" id=14]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=15]
size = 64
font_data = SubResource( 14 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 1 )
region_rect = Rect2( 10, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="DynamicFontData" id=19]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=22]
size = 32
font_data = SubResource( 21 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 10, 12 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 6.0

[sub_resource type="DynamicFontData" id=24]
font_path = "res://fonts/monogram_extended.ttf"

[sub_resource type="DynamicFont" id=25]
size = 32
font_data = SubResource( 24 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.121569, 0.231373, 1 )

[node name="Fases" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Fases"]
anchor_right = 1.0
margin_top = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Seleção de fase "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Fases"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Fases/Center"]
margin_left = 5.0
margin_top = 70.0
margin_right = 355.0
margin_bottom = 570.0
rect_min_size = Vector2( 350, 500 )
theme = SubResource( 4 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="Fases/Center/Scroll"]
margin_right = 350.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Fases"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -58.0
margin_right = 99.0
margin_bottom = -11.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 42.0
margin_top = 190.0
margin_right = 318.0
margin_bottom = 450.0
custom_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 56.0
rect_min_size = Vector2( 276, 56 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 276.0
margin_bottom = 260.0

[node name="Play" type="Button" parent="Menu/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 276.0
margin_bottom = 62.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Iniciar"

[node name="Options" type="Button" parent="Menu/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 276.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 47 )
focus_mode = 0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Opções"

[node name="Credits" type="Button" parent="Menu/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 276.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 47 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Sobre"

[node name="Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options"]
anchor_right = 1.0
margin_top = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Opções"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Options/Center"]
margin_left = 42.0
margin_top = 252.0
margin_right = 318.0
margin_bottom = 388.0
custom_constants/separation = 40

[node name="Sound" type="Button" parent="Options/Center/VBox"]
margin_right = 276.0
margin_bottom = 48.0
rect_min_size = Vector2( 276, 48 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Sons: Ligado"

[node name="Reset" type="Button" parent="Options/Center/VBox"]
margin_top = 88.0
margin_right = 276.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 48 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Resetar progresso"

[node name="Back" type="Button" parent="Options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -58.0
margin_right = 99.0
margin_bottom = -11.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Reset"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Reset/Center"]
margin_left = 24.0
margin_top = 249.0
margin_right = 336.0
margin_bottom = 391.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 40

[node name="Label" type="Label" parent="Reset/Center/VBox"]
margin_right = 312.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 22 )
text = "TODO o seu progresso será
perdido. Você tem certeza?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Reset/Center/VBox"]
margin_top = 95.0
margin_right = 312.0
margin_bottom = 142.0

[node name="Nope" type="Button" parent="Reset/Center/VBox/HBox"]
margin_right = 154.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 47 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "não..."

[node name="Yes" type="Button" parent="Reset/Center/VBox/HBox"]
margin_left = 158.0
margin_right = 312.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 47 )
size_flags_horizontal = 3
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "SIM!"

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
anchor_right = 1.0
margin_top = 18.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Sobre"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Credits/Center"]
margin_left = 30.0
margin_top = 70.0
margin_right = 330.0
margin_bottom = 570.0
rect_min_size = Vector2( 300, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 25 )
bbcode_enabled = true
bbcode_text = "[center]Jogo desenvolvido por
Gustavo T. dos Santos

[color=yellow]Este jogo está em fase de testes. Qualquer bug ou sugestão pode ser enviada para [url=mailto://gtds@rede.ulbra.br]gtds@rede.ulbra.br[/url][/color]

Feito na [url=https://godotengine.org]Godot Engine[/url]

Música criada por [url=http://abstractionmusic.com]Abstraction[/url]

Sons criados por [url=https://freesound.org/people/LittleRobotSoundFactory/]LittleRobotSoundFactory[/url]

[color=aqua][url=https://bit.ly/cadebox]Responder ao questionário[/url][/color][/center]"
text = "Jogo desenvolvido por
Gustavo T. dos Santos

Este jogo está em fase de testes. Qualquer bug ou sugestão pode ser enviada para gtds@rede.ulbra.br

Feito na Godot Engine

Música criada por Abstraction

Sons criados por LittleRobotSoundFactory

Responder ao questionário"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -58.0
margin_right = 99.0
margin_bottom = -11.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Sound" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="Fases/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Options/Center/VBox/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Options/Center/VBox/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Reset/Center/VBox/HBox/Nope" to="." method="_on_Nope_pressed"]
[connection signal="pressed" from="Reset/Center/VBox/HBox/Yes" to="." method="_on_Yes_pressed"]
[connection signal="meta_clicked" from="Credits/Center/Text" to="." method="_on_Text_meta_clicked"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_Back_pressed"]
